Update Backend | Change Weather APi | Complete front

--- a/frontend/css/screen.css
+++ b/frontend/css/screen.css
@@ -2757,7 +2757,7 @@ textarea:focus {
 
 /* -------- Intro Section -------- */
 .hero-box {
-  background-image: url(../img/hero-background.gif);
+  background-image: url(https://i.gifer.com/7H9D.gif);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
